--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </main>
 
     <footer class="footer">
-        <h3 class="footer__titulo">REDES Y CONTACTOS</h3>
+        <h3 class="footer__titulo">REDES Y CONTACTOSS</h3>
             <ul class="footer__ul">
                 <li>
                     <a class="footer__link" href="https://www.instagram.com/" target="_blank">instagram</a>
