--- a/nuevos_torneos.html
+++ b/nuevos_torneos.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="estilo.css" rel="stylesheet">
+    <meta name="description" content="Noticias de los videojuegos en tendencias, y los torneos proximos a transmitir">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <meta name="description" content="Noticias de los videojuegos en tendencias, y los torneos proximos a transmitir">
+    <link href="estilo.css" rel="stylesheet">
     <title>Electronics Sports </title>
 </head>
 <body>
@@ -75,7 +75,7 @@
 
 
     <footer class="footer">
-        <h3 class="footer__titulo">REDES Y CONTACTOS DE LOS CREADORES</h2>
+        <h3 class="footer__titulo">REDES Y CONTACTOS</h2>
             <ul class="footer__ul">
                 <li>
                     <a class="footer__link" href="https://www.instagram.com/" target="_blank">instagram</a>
