Actualizacion de estilo

--- a/tienda.html
+++ b/tienda.html
@@ -17,6 +17,7 @@
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     </style>
+    <link href="fonts/style.css" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet">
     <title>Especiales para Gamer</title>
 </head>
@@ -27,29 +28,28 @@
             <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
             <nav class="navHeader">
                 <ul class="listaPadre">
-                    <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="Index.html">Inicio</a>
+                    <li class="listaPadre__listaNavegador"> 
+                        <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
                     </li>
                     <li class="listaPadre__listaNavegador" >
-                        <a class="linkNav" href="nuevos_torneos.html">Nuevos torneos disponibles</a>
+                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
                         <ul class="ulSubMenu">
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
                         </ul>
                     </li>
                     <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="registraTuEquipo.html">Registra tu equipo</a>
+                        <a class="linkNav" href="registraTuEquipo.html"><span class="icon-gamepad"></span>   Registra tu equipo</a>
                     </li>
                     <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="noticias.html">Noticias</a>
+                        <a class="linkNav" href="noticias.html"><span class="icon-radio"></span>   Noticias</a>
                     </li>
                     <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="tienda.html">Tienda</a>
+                        <a class="linkNav" href="tienda.html"><span class="icon-cart"></span>   Tienda</a>
                     </li>
                 </ul>
     
             </nav>
-            
         </header>
 
         <div class="animacionDescubierta">
