--- a/registraTuEquipo.html
+++ b/registraTuEquipo.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Torneos de Esports (video juegos), noticias y lanzamientos de nuevos video juegos, y proximamente apuestas en las copas mundiales">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="fonts/style.css" rel="stylesheet">
     <link href="estilo.css" rel="stylesheet">
     <title>Equipos de ESports</title>
 
@@ -15,36 +16,35 @@
 </head>
 <body class="bodyRegistro">
     <div class="registro">
-        <header class="headerNav">
-            <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
-            <nav class="navHeader">
-                <ul class="listaPadre">
-                    <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="Index.html">Inicio</a>
-                    </li>
-                    <li class="listaPadre__listaNavegador" >
-                        <a class="linkNav" href="nuevos_torneos.html">Nuevos torneos disponibles</a>
-                        <ul class="ulSubMenu">
-                            <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
-                            <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
-                        </ul>
-                    </li>
-                    <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="registraTuEquipo.html">Registra tu equipo</a>
-                    </li>
-                    <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="noticias.html">Noticias</a>
-                    </li>
-                    <li class="listaPadre__listaNavegador">
-                        <a class="linkNav" href="tienda.html">Tienda</a>
-                    </li>
-                </ul>
-    
-            </nav>
-            
-        </header>
+      <header class="headerNav">
+        <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
+        <nav class="navHeader">
+            <ul class="listaPadre">
+                <li class="listaPadre__listaNavegador"> 
+                    <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
+                </li>
+                <li class="listaPadre__listaNavegador" >
+                    <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
+                    <ul class="ulSubMenu">
+                        <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
+                        <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
+                    </ul>
+                </li>
+                <li class="listaPadre__listaNavegador">
+                    <a class="linkNav" href="registraTuEquipo.html"><span class="icon-gamepad"></span>   Registra tu equipo</a>
+                </li>
+                <li class="listaPadre__listaNavegador">
+                    <a class="linkNav" href="noticias.html"><span class="icon-radio"></span>   Noticias</a>
+                </li>
+                <li class="listaPadre__listaNavegador">
+                    <a class="linkNav" href="tienda.html"><span class="icon-cart"></span>   Tienda</a>
+                </li>
+            </ul>
 
-   
+        </nav>
+    </header>
+
+
 <div class="animacionRegistro">
     <img  src="Trofeo.jpg" alt="Trofeo"> 
 </div>
