Actualizando secciones y estilos

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body> 
     <div class="gridPrincipal">
         <header class="headerNav">
-            <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
+            <img class="headerNav__imagen" src="pruebaParaNav.jpg" alt="imagenApertura" >
             <nav class="navHeader">
                 <ul class="listaPadre">
                     <li class="listaPadre__listaNavegador"> 
                         <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
                     </li>
                     <li class="listaPadre__listaNavegador" >
-                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
+                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos</a>
                         <ul class="ulSubMenu">
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
@@ -53,13 +53,13 @@
         </div>
         <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="fortnite.jpg" class="d-block w-100" alt="COD">
+            <img src="fortniteMejorado.jpg" class="d-block w-100" alt="COD">
         </div>
         <div class="carousel-item">
-            <img src="CODwarzone.jpg" class="d-block w-100" alt="Warzone">
+            <img src="call-duty-black-ops-cold-war-warzone-2244039.jpg" class="d-block w-100" alt="Warzone">
         </div>
         <div class="carousel-item">
-            <img src="LOLjuego.jpg" class="d-block w-100" alt="LOL">
+            <img src="lolMejorado.jpg" class="d-block w-100" alt="LOL">
         </div>
         </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,7 +81,7 @@
             </div>
             <div class="cards__2">
                 <h2>Torneos</h2>
-                <img src="personajesVarios.jpg" alt="torneosVarios">
+                <img src="rocketLeague.jpeg" alt="torneosVarios">
                 
             </div>
             <div class="cards__3">
@@ -93,7 +93,7 @@
             </div>
             <div class="cards__4">
                 <h2>Populares</h2>
-                <img src="Los-videojuegos-más-vendidos-de-2017.jpg" alt="populares">
+                <img src="populares2.jpg" alt="populares">
 
             </div>
 
@@ -101,7 +101,7 @@
     </main>
 
     <footer class="footer">
-        <h3 class="footer__titulo">REDES Y CONTACTOSS</h3>
+        <h3 class="footer__titulo">REDES Y CONTACTOS</h3>
             <ul class="footer__ul">
                 <li>
                     <a class="footer__link" href="https://www.instagram.com/" target="_blank">instagram</a>
