--- a/nuevos_torneos.html
+++ b/nuevos_torneos.html
@@ -15,14 +15,14 @@
 <body>
     <div class="gridTorneos">
         <header class="headerNav">
-            <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
+            <img class="headerNav__imagen" src="pruebaParaNav.jpg" alt="imagenApertura" >
             <nav class="navHeader">
                 <ul class="listaPadre">
                     <li class="listaPadre__listaNavegador"> 
                         <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
                     </li>
                     <li class="listaPadre__listaNavegador" >
-                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
+                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos</a>
                         <ul class="ulSubMenu">
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
@@ -48,22 +48,22 @@
 
         <div class="torneo1"> 
             <h2>Encuentra tu torneo</h2>
-            <img src="juegoRpg.jpg" alt="juegoRpg"> 
+            <img src="copaLol.png" alt="juegoRpg"> 
         </div>
 
         <div class="torneo2">
-            <img src="CODwarzone.jpg" alt="COD">
+            <img src="counter-strike-global-offensive-.jpg" alt="COD">
         </div>
         
         <div class="torneo3">
-            <img src="Fifa20.jpg" alt="Fifa">
+            <img src="fifa21.png" alt="Fifa">
         </div>
 
         <div class="torneo4">
-            <img src="fortnite.jpg" alt="fortnite">
+            <img src="fortniteMejorado.jpg" alt="fortnite">
         </div>
         <div class="torneo5">
-            <img src="LOLjuego.jpg" alt="LOL">
+            <img src="lolMejorado.jpg" alt="LOL">
 
         </div>
 
