--- a/registraTuEquipo.html
+++ b/registraTuEquipo.html
@@ -17,14 +17,14 @@
 <body class="bodyRegistro">
     <div class="registro">
       <header class="headerNav">
-        <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
+        <img class="headerNav__imagen" src="pruebaParaNav.jpg" alt="imagenApertura" >
         <nav class="navHeader">
             <ul class="listaPadre">
                 <li class="listaPadre__listaNavegador"> 
                     <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
                 </li>
                 <li class="listaPadre__listaNavegador" >
-                    <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
+                    <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos</a>
                     <ul class="ulSubMenu">
                         <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
                         <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
