--- a/tienda.html
+++ b/tienda.html
@@ -25,14 +25,14 @@
 <body id="tienda">
     <div class="tienda">
         <header class="headerNav">
-            <img class="headerNav__imagen" src="imagenHeaderProyecto.jpg_1902800913.jpg" alt="imagenApertura" >
+            <img class="headerNav__imagen" src="pruebaParaNav.jpg" alt="imagenApertura" >
             <nav class="navHeader">
                 <ul class="listaPadre">
                     <li class="listaPadre__listaNavegador"> 
                         <a class="linkNav" href="index.html"> <span class="icon-keyboard"></span>   Inicio</a>
                     </li>
                     <li class="listaPadre__listaNavegador" >
-                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos disponibles</a>
+                        <a class="linkNav" href="nuevos_torneos.html"><span class="icon-gamepad1"></span>   Nuevos torneos</a>
                         <ul class="ulSubMenu">
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#nuevosTorneos"> Nuevos torneos</a></li>
                             <li class="ulSubMenu__subListas"> <a class="ulSubMenu__linkNav" href="nuevos_torneos.html#torneosMasJugados"> Torneos mas jugados</a></li>
@@ -61,13 +61,13 @@
             </div>
             <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="fortnite.jpg" class="d-block w-100" alt="COD">
+                <img src="fortniteMejorado.jpg" class="d-block w-100" alt="COD">
             </div>
             <div class="carousel-item">
-                <img src="CODwarzone.jpg" class="d-block w-100" alt="Warzone">
+                <img src="call-duty-black-ops-cold-war-warzone-2244039.jpg" class="d-block w-100" alt="Warzone">
             </div>
             <div class="carousel-item">
-                <img src="LOLjuego.jpg" class="d-block w-100" alt="LOL">
+                <img src="lolMejorado.jpg" class="d-block w-100" alt="LOL">
             </div>
             </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
